--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	
+	<nav>
+		<ul>
+			<li><a href ="https://google.com/">google</a></li>
+			<li><a href ="https://youtube.com/">youtube</a></li>
+			<li><a href ="https://in.linkedin.com/">linkedin</a></li>
+		</ul>
+	</nav>
 
+	
 </body>
 
 </html>
