--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 	<audio controls>
         <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
         Your browser does not support the audio element.
-    </audio
+	</audio>
 
 	<audio controls>
         <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
