--- a/main.html
+++ b/main.html
@@ -3,29 +3,28 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	
-	<nav>
-		<ul>
-			<li><a href ="https://google.com/">google</a></li>
-			<li><a href ="https://youtube.com/">youtube</a></li>
-			<li><a href ="https://in.linkedin.com/">linkedin</a></li>
-		</ul>
-	</nav>
+    <!-- the entire body must be written by the student -->
+    <script type="text/javascript" src="./script.js"></script>
+    
+    <nav>
+        <ul>
+            <li><a href="https://google.com/">google</a></li>
+            <li><a href="https://youtube.com/">youtube</a></li>
+            <li><a href="https://in.linkedin.com/">linkedin</a></li>
+        </ul>
+    </nav>
 
-	<h1>3 random audios</h1>
-	<audio controls>
+    <h1>3 random audios</h1>
+    <audio controls>
         <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
         Your browser does not support the audio element.
-	</audio>
+    </audio>
 
-	<audio controls>
+    <audio controls>
         <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
@@ -34,9 +33,7 @@
         <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
-   
 
-	
 </body>
 
 </html>
