--- a/main.html
+++ b/main.html
@@ -27,6 +27,10 @@
         <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
+	    <audio controls>
+        <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
 
 </body>
 
